[gd_scene load_steps=11 format=3 uid="uid://8sbmwuvuyadl"]

[ext_resource type="Script" path="res://system/generation/DungeonRoom.gd" id="1_4xwcq"]
[ext_resource type="MeshLibrary" uid="uid://144bif61d05y" path="res://world/dungeontiles/dungeontileset.tres" id="1_roams"]
[ext_resource type="Script" path="res://system/generation/EnemySpawns.gd" id="2_gxbq0"]
[ext_resource type="PackedScene" uid="uid://behyuimsd1sib" path="res://world/props/iron_bars.tscn" id="3_4fn7w"]
[ext_resource type="PackedScene" uid="uid://dbyevw4vq02kk" path="res://enemies/enemy.tscn" id="3_awwfu"]
[ext_resource type="AudioStream" uid="uid://dmpio4305cyuv" path="res://sfx/props/iron_gates_slam.wav" id="4_wif3k"]
[ext_resource type="PackedScene" uid="uid://ct6xxcocgimjv" path="res://world/props/torch.tscn" id="7_b3tgd"]

[sub_resource type="Resource" id="Resource_c6lwb"]
script = ExtResource("2_gxbq0")
enemy = ExtResource("3_awwfu")
num_spawns = 1

[sub_resource type="BoxShape3D" id="BoxShape3D_2oq6w"]
size = Vector3(4, 4, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_31nro"]
size = Vector3(22, 10, 22)

[node name="BaseDungeonScene" type="Node3D"]
script = ExtResource("1_4xwcq")
enemies = Array[ExtResource("2_gxbq0")]([SubResource("Resource_c6lwb")])

[node name="TileMap" type="GridMap" parent="."]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, 0)
mesh_library = ExtResource("1_roams")
cell_size = Vector3(1, 1, 1)
cell_center_y = false
data = {
"cells": PackedInt32Array(65533, 65534, 2, 65533, 65535, 2, 65533, 0, 2, 65533, 1, 2, 65534, 2, 2, 65535, 2, 2, 0, 2, 2, 1, 2, 2, 2, 1, 2, 2, 0, 2, 2, 65535, 2, 2, 65534, 2, 1, 65534, 2, 0, 65534, 2, 65535, 65534, 2, 65534, 65534, 2, 65534, 65533, 2, 65535, 65533, 2, 0, 65533, 2, 1, 65533, 2, 1, 65535, 2, 1, 0, 2, 1, 1, 2, 0, 1, 2, 65535, 1, 2, 65534, 1, 2, 65534, 0, 2, 65534, 65535, 2, 65535, 65535, 2, 65535, 0, 2, 0, 0, 2, 0, 65535, 2, 2, 65533, 2, 65533, 65533, 2, 65533, 2, 2, 2, 2, 2, 65535, 65532, 2, 65535, 65531, 2, 65535, 65530, 2, 0, 65530, 2, 0, 65531, 2, 0, 65532, 2, 65532, 65535, 2, 65531, 65535, 2, 65530, 65535, 2, 65530, 0, 2, 65531, 0, 2, 65532, 0, 2, 65535, 3, 2, 65535, 4, 2, 65535, 5, 2, 0, 5, 2, 0, 4, 2, 0, 3, 2, 3, 65535, 2, 4, 65535, 2, 5, 65535, 2, 5, 0, 2, 4, 0, 2, 3, 0, 2, 65534, 65530, 2, 65533, 65530, 2, 65532, 65530, 2, 65531, 65530, 2, 65530, 65530, 2, 65530, 65531, 2, 65530, 65532, 2, 65530, 65533, 2, 65530, 65534, 2, 65530, 1, 2, 65530, 2, 2, 65530, 3, 2, 65530, 4, 2, 65530, 5, 2, 65531, 5, 2, 65532, 5, 2, 65533, 5, 2, 65534, 5, 2, 1, 5, 2, 2, 5, 2, 3, 5, 2, 4, 5, 2, 5, 5, 2, 5, 4, 2, 5, 3, 2, 5, 2, 2, 5, 1, 2, 5, 65534, 2, 5, 65533, 2, 5, 65532, 2, 5, 65531, 2, 5, 65530, 2, 4, 65530, 2, 3, 65530, 2, 2, 65530, 2, 1, 65530, 2, 65532, 1, 2, 65531, 1, 2, 65531, 2, 2, 65531, 3, 2, 65532, 3, 2, 65532, 4, 2, 65533, 4, 2, 65534, 4, 2, 65534, 3, 2, 65533, 3, 2, 65532, 2, 2, 1, 4, 2, 2, 4, 2, 3, 4, 2, 4, 4, 2, 4, 3, 2, 4, 2, 2, 4, 1, 2, 3, 1, 2, 3, 2, 2, 3, 3, 2, 2, 3, 2, 1, 3, 2, 65531, 4, 2, 65531, 65534, 2, 65532, 65534, 2, 65532, 65533, 2, 65531, 65533, 2, 65531, 65532, 2, 65531, 65531, 2, 65532, 65531, 2, 65532, 65532, 2, 65533, 65532, 2, 65533, 65531, 2, 65534, 65531, 2, 65534, 65532, 2, 1, 65532, 2, 2, 65532, 2, 3, 65532, 2, 2, 65531, 2, 1, 65531, 2, 3, 65531, 2, 4, 65531, 2, 4, 65532, 2, 4, 65533, 2, 4, 65534, 2, 3, 65534, 2, 3, 65533, 2, 1, 65529, 655360, 2, 65529, 655360, 3, 65529, 655360, 4, 65529, 655360, 5, 65529, 655360, 65534, 65529, 655360, 65533, 65529, 655360, 65532, 65529, 655360, 65531, 65529, 655360, 65530, 65529, 655360, 65529, 65530, 1441792, 65529, 65531, 1441792, 65529, 65532, 1441792, 65529, 65533, 1441792, 65529, 65534, 1441792, 65529, 1, 1441792, 65529, 2, 1441792, 65529, 3, 1441792, 65529, 4, 1441792, 65529, 5, 1441792, 65530, 6, 0, 65531, 6, 0, 65532, 6, 0, 65533, 6, 0, 65534, 6, 0, 1, 6, 0, 2, 6, 0, 3, 6, 0, 4, 6, 0, 5, 6, 0, 6, 5, 1048576, 6, 4, 1048576, 6, 3, 1048576, 6, 2, 1048576, 6, 1, 1048576, 6, 65534, 1048576, 6, 65533, 1048576, 6, 65532, 1048576, 6, 65531, 1048576, 6, 65530, 1048576, 6, 65529, 655361, 65529, 65529, 1441793, 65529, 6, 1, 6, 6, 1048577, -1, 65530, 4, -65536, 65530, 4, -65536, 65531, 4, -65536, 65532, 4, -65536, 65533, 4, -1, 65531, 4, -1, 65532, 4, -1, 65533, 4, -1, 65534, 4, -1, 65535, 4, -2, 65535, 4, -2, 0, 4, -3, 0, 4, -3, 65535, 4, -3, 65534, 4, -3, 65533, 4, -3, 65532, 4, -2, 65532, 4, -2, 65531, 4, -3, 65531, 4, -2, 65534, 4, -2, 65533, 4, -4, 65532, 4, -5, 65531, 4, -6, 65531, 4, -7, 65531, 4, -7, 65532, 4, -6, 65533, 4, -6, 65534, 4, -5, 65534, 4, -5, 65535, 4, -5, 0, 4, -5, 1, 4, -4, 1, 4, -4, 0, 4, -4, 65535, 4, -4, 65534, 4, -5, 65533, 4, -5, 65532, 4, -6, 65530, 4, -7, 65530, 4, -7, 65533, 4, -7, 65534, 4, -6, 65535, 4, -6, 0, 4, -6, 1, 4, -4, 2, 4, -3, 2, 4, -2, 2, 4, -2, 1, 4, -1, 1, 4, -1, 0, 4, -65536, 0, 4, -65536, 65535, 4, -65536, 65534, 4, -2, 65530, 4, -3, 65530, 4, -4, 65530, 4, -5, 65530, 4, -8, 65535, 4, -8, 0, 4, -7, 1, 4, -6, 2, 4, -5, 2, 4, -3, 1, 4, -3, 65529, 4, -6, 65529, 4, -9, 65535, 4, -10, 0, 4, -9, 0, 4, -7, 0, 4, -10, 65535, 4, -11, 65535, 4, -65535, 65529, 4, -65535, 65530, 4, -65535, 65531, 4, -65535, 65532, 4, -65535, 65533, 4, -65535, 65534, 4, -65535, 65535, 4, -5, 65529, 4, -4, 65531, 4, -4, 65529, 4, -2, 65529, 4, -65534, 65529, 4, -65534, 65530, 4, -4, 65533, 655364, -6, 65532, 655364, -7, 65535, 655364, -65536, 1, 4, -65535, 0, 4, -65535, 1, 4, -65534, 1, 4, -65534, 0, 4, -65534, 65535, 4, -65533, 65535, 4, -65533, 65534, 4, -65533, 65533, 4, -65533, 65532, 4, -65533, 65531, 4, -65534, 65531, 4, -65534, 65532, 4, -65534, 65533, 4, -65534, 65534, 4, -65533, 0, 4, -65533, 1, 4, -65532, 1, 4, -65532, 0, 4, -65532, 65535, 4, -65532, 65534, 4, -65531, 65534, 4, -65531, 65533, 4, -65531, 65532, 4, -65531, 65531, 4, -65531, 65530, 4, -65531, 65529, 4, -65532, 65529, 4, -65536, 65529, 4, -1, 65529, 4, -65530, 65532, 4, -65530, 65533, 4, -65530, 65531, 4, -65530, 65530, 4, -65530, 65529, 4, -65532, 65531, 4, -65532, 65532, 4, -65532, 65533, 4, -65532, 65530, 4, -65533, 65529, 4, -65533, 65530, 4, -65536, 2, 4, -1, 2, 4, -65535, 2, 4, -65534, 2, 4, -65533, 2, 4, -65531, 0, 4, -65531, 65535, 4, -65530, 65535, 4, -65530, 65534, 4, -7, 2, 4, -7, 5, 4, -6, 5, 4, -5, 5, 4, -5, 4, 4, -4, 4, 4, -3, 4, 4, -2, 4, 4, -6, 4, 4, -1, 4, 4, -1, 5, 4, -65536, 5, 4, -65535, 5, 4, -65534, 5, 4, -2, 5, 4, -3, 5, 4, -7, 4, 4, -7, 3, 4, -4, 6, 4, -3, 6, 4, -2, 6, 4, -1, 6, 4, -65536, 6, 4, -65535, 6, 4, -5, 6, 4, -6, 6, 4, -7, 6, 4, -65534, 6, 4, -65533, 6, 4, -65532, 6, 4, -65531, 6, 4, -65531, 5, 4, -65533, 5, 4, -65532, 5, 4, -65536, 4, 4, -65535, 4, 4, -65534, 4, 4, -65530, 6, 4, -7, 65529, 4, -65533, 4, 4, -65533, 3, 4, -65534, 3, 4, -65535, 3, 4, -65536, 3, 4, -1, 3, 4, -2, 3, 4, -3, 3, 4, -6, 3, 4, -5, 3, 4, -4, 5, 4, -65532, 4, 4, -65532, 3, 4, -65531, 1, 4, -65531, 2, 4, -65530, 2, 4, -65530, 1, 4, -65530, 0, 4, -65530, 3, 4, -65530, 4, 4, -65531, 4, 4, -65531, 3, 4, -65532, 2, 4, -65530, 5, 4, -4, 3, 4)
}
metadata/_editor_floor_ = Vector3(0, -1, 0)

[node name="SealedUp" type="GridMap" parent="."]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, 0)
mesh_library = ExtResource("1_roams")
cell_size = Vector3(1, 1, 1)
cell_center_y = false
data = {
"cells": PackedInt32Array(65535, 65529, 655360, 0, 65529, 655360)
}
metadata/_editor_floor_ = Vector3(0, 0, 0)

[node name="SealedDown" type="GridMap" parent="."]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, 0)
mesh_library = ExtResource("1_roams")
cell_size = Vector3(1, 1, 1)
cell_center_y = false
data = {
"cells": PackedInt32Array(65535, 6, 0, 0, 6, 0)
}
metadata/_editor_floor_ = Vector3(0, 0, 0)

[node name="SealedLeft" type="GridMap" parent="."]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, 0)
mesh_library = ExtResource("1_roams")
cell_size = Vector3(1, 1, 1)
cell_center_y = false
data = {
"cells": PackedInt32Array(65529, 65535, 1441792, 65529, 0, 1441792)
}
metadata/_editor_floor_ = Vector3(0, 0, 0)

[node name="SealedRight" type="GridMap" parent="."]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, 0)
mesh_library = ExtResource("1_roams")
cell_size = Vector3(1, 1, 1)
cell_center_y = false
data = {
"cells": PackedInt32Array(6, 65535, 1048576, 6, 0, 1048576)
}
metadata/_editor_floor_ = Vector3(0, 0, 0)

[node name="CorridorUp" type="GridMap" parent="."]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, 0)
mesh_library = ExtResource("1_roams")
cell_size = Vector3(1, 1, 1)
cell_center_y = false
data = {
"cells": PackedInt32Array(65535, 65526, 1441792, 65535, 65525, 1441792, 0, 65527, 1048576, 0, 65526, 1048576, 0, 65525, 1048576, -65536, 65528, 4, -1, 65528, 4, -1, 65527, 4, -65536, 65527, 4, -65536, 65526, 4, -1, 65526, 4, -1, 65525, 4, -65536, 65525, 4, 65535, 65528, 1441792, 65535, 65527, 1441792, 0, 65528, 1048576, 65535, 65529, 1441795, 0, 65529, 655363)
}
metadata/_editor_floor_ = Vector3(0, -1, 0)

[node name="GateTriggerArea" type="Area3D" parent="CorridorUp"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.99359, -7.91663)

[node name="CollisionShape3D" type="CollisionShape3D" parent="CorridorUp/GateTriggerArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.6013)
shape = SubResource("BoxShape3D_2oq6w")

[node name="iron_bars" parent="CorridorUp/GateTriggerArea" instance=ExtResource("3_4fn7w")]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 2.09231, 0)

[node name="GateAudio" type="AudioStreamPlayer3D" parent="CorridorUp/GateTriggerArea"]
stream = ExtResource("4_wif3k")

[node name="torch" parent="CorridorUp" instance=ExtResource("7_b3tgd")]
transform = Transform3D(8.74228e-08, 0, 0.666667, 0, 0.666667, 0, -0.666667, 0, 8.74228e-08, 0.894363, 1.38372, -8.66436)

[node name="torch2" parent="CorridorUp" instance=ExtResource("7_b3tgd")]
transform = Transform3D(-1.45705e-07, 0, -0.666667, 0, 0.666667, 0, 0.666667, 0, -1.45705e-07, -0.874339, 1.38372, -8.66436)

[node name="CorridorDown" type="GridMap" parent="."]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, 0)
mesh_library = ExtResource("1_roams")
cell_size = Vector3(1, 1, 1)
cell_center_y = false
data = {
"cells": PackedInt32Array(0, 7, 1048576, 0, 8, 1048576, 0, 9, 1048576, 0, 10, 1048576, 65535, 7, 1441792, 65535, 8, 1441792, 65535, 9, 1441792, 65535, 10, 1441792, 0, 6, 1048579, 65535, 6, 3, -65536, 7, 4, -1, 7, 4, -1, 8, 4, -65536, 8, 4, -65536, 9, 4, -1, 9, 4, -1, 10, 4, -65536, 10, 4)
}
metadata/_editor_floor_ = Vector3(0, -1, 0)

[node name="GateTriggerArea" type="Area3D" parent="CorridorDown"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 1.994, 7.917)

[node name="CollisionShape3D" type="CollisionShape3D" parent="CorridorDown/GateTriggerArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.6013)
shape = SubResource("BoxShape3D_2oq6w")

[node name="iron_bars" parent="CorridorDown/GateTriggerArea" instance=ExtResource("3_4fn7w")]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 2.09231, 0)

[node name="GateAudio" type="AudioStreamPlayer3D" parent="CorridorDown/GateTriggerArea"]
stream = ExtResource("4_wif3k")

[node name="torch" parent="CorridorDown" instance=ExtResource("7_b3tgd")]
transform = Transform3D(8.74228e-08, 0, 0.666667, 0, 0.666667, 0, -0.666667, 0, 8.74228e-08, 0.894363, 1.38372, 8.66898)

[node name="torch2" parent="CorridorDown" instance=ExtResource("7_b3tgd")]
transform = Transform3D(-1.45705e-07, 0, -0.666667, 0, 0.666667, 0, 0.666667, 0, -1.45705e-07, -0.874339, 1.38372, 8.66898)

[node name="CorridorLeft" type="GridMap" parent="."]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, 0)
mesh_library = ExtResource("1_roams")
cell_size = Vector3(1, 1, 1)
cell_center_y = false
data = {
"cells": PackedInt32Array(65528, 0, 0, 65527, 0, 0, 65526, 0, 0, 65525, 0, 0, 65528, 65535, 655360, 65527, 65535, 655360, 65526, 65535, 655360, 65525, 65535, 655360, 65529, 65535, 1441795, 65529, 0, 3, -11, 65535, 4, -11, 0, 4, -10, 0, 4, -9, 65535, 4, -8, 65535, 4, -8, 0, 4, -9, 0, 4, -10, 65535, 4)
}
metadata/_editor_floor_ = Vector3(0, -1, 0)

[node name="GateTriggerArea" type="Area3D" parent="CorridorLeft"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -7.892, 1.994, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="CorridorLeft/GateTriggerArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.6013)
shape = SubResource("BoxShape3D_2oq6w")

[node name="iron_bars" parent="CorridorLeft/GateTriggerArea" instance=ExtResource("3_4fn7w")]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 2.09231, 0)

[node name="GateAudio" type="AudioStreamPlayer3D" parent="CorridorLeft/GateTriggerArea"]
stream = ExtResource("4_wif3k")

[node name="torch" parent="CorridorLeft" instance=ExtResource("7_b3tgd")]
transform = Transform3D(-0.666667, 0, 5.82819e-08, 0, 0.666667, 0, -5.82819e-08, 0, -0.666667, -8.65665, 1.38372, -0.882039)

[node name="torch2" parent="CorridorLeft" instance=ExtResource("7_b3tgd")]
transform = Transform3D(0.666667, 0, -1.16564e-07, 0, 0.666667, 0, 1.16564e-07, 0, 0.666667, -8.65665, 1.38372, 0.886662)

[node name="CorridorRight" type="GridMap" parent="."]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, 0)
mesh_library = ExtResource("1_roams")
cell_size = Vector3(1, 1, 1)
cell_center_y = false
data = {
"cells": PackedInt32Array(6, 0, 1048579, 6, 65535, 655363, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 7, 65535, 655360, 8, 65535, 655360, 9, 65535, 655360, 10, 65535, 655360, -65526, 65535, 4, -65526, 0, 4, -65527, 0, 4, -65527, 65535, 4, -65528, 0, 4, -65528, 65535, 4, -65529, 0, 4, -65529, 65535, 4)
}
metadata/_editor_floor_ = Vector3(0, -1, 0)

[node name="GateTriggerArea" type="Area3D" parent="CorridorRight"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 7.892, 1.994, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="CorridorRight/GateTriggerArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.6013)
shape = SubResource("BoxShape3D_2oq6w")

[node name="iron_bars" parent="CorridorRight/GateTriggerArea" instance=ExtResource("3_4fn7w")]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 2.09231, 0)

[node name="GateAudio" type="AudioStreamPlayer3D" parent="CorridorRight/GateTriggerArea"]
stream = ExtResource("4_wif3k")

[node name="torch" parent="CorridorRight" instance=ExtResource("7_b3tgd")]
transform = Transform3D(-0.666667, 0, 5.82819e-08, 0, 0.666667, 0, -5.82819e-08, 0, -0.666667, 8.67668, 1.38372, -0.882039)

[node name="torch2" parent="CorridorRight" instance=ExtResource("7_b3tgd")]
transform = Transform3D(0.666667, 0, -1.16564e-07, 0, 0.666667, 0, 1.16564e-07, 0, 0.666667, 8.67668, 1.38372, 0.886662)

[node name="EnterRoomTrigger" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="EnterRoomTrigger"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0)
shape = SubResource("BoxShape3D_31nro")

[node name="EnemySpawnPoints" type="Node3D" parent="."]

[node name="SpawnPoint" type="Node3D" parent="EnemySpawnPoints"]

[node name="Props" type="Node3D" parent="."]

[connection signal="body_entered" from="EnterRoomTrigger" to="." method="_on_enter_room_trigger_body_entered"]
